fix translations signup and signin

--- a/src/messages/locales/en/auth.json
+++ b/src/messages/locales/en/auth.json
@@ -25,7 +25,14 @@
     },
     "validation": {
       "required": "This field is required",
-      "invalid_email": "Invalid email address"
+      "invalid_email": "Invalid email address",
+      "name_required": "Name required",
+      "surname_required": "Surname required",
+      "email_invalid": "Email not valid",
+      "password_required": "Password required",
+      "password_min_length": "Password should have have at least 8 chars",
+      "confirm_password_required": "Confirm password required",
+      "passwords_dont_match": "Passwords don't match"
     }
   },
   "signup": {
@@ -79,7 +86,14 @@
       "passwordRequired": "Password is required",
       "passwordMinLength": "Password must be at least 8 characters",
       "confirmPasswordRequired": "Password confirmation is required",
-      "passwordsDoNotMatch": "Passwords do not match"
+      "passwordsDoNotMatch": "Passwords do not match",
+      "name_required": "Name required",
+      "surname_required": "Surname required",
+      "email_invalid": "Email not valid",
+      "password_required": "Password required",
+      "password_min_length": "Password should have have at least 8 chars",
+      "confirm_password_required": "Confirm password required",
+      "passwords_dont_match": "Passwords don't match"
     },
     "errors": {
       "user_exists": "Email already registered",
