--- a/src/messages/locales/it/auth.json
+++ b/src/messages/locales/it/auth.json
@@ -25,7 +25,14 @@
       },
       "validation": {
         "required": "Questo campo è obbligatorio",
-        "invalid_email": "Indirizzo email non valido"
+        "invalid_email": "Indirizzo email non valido",
+        "name_required": "Nome obbligatorio",
+        "surname_required": "Cognome obbligatorio",
+        "email_invalid": "Email non valida",
+        "password_required": "Password obbligatoria",
+        "password_min_length": "Password deve contenere almeno 8 caratteri",
+        "confirm_password_required": "Conferma password obbligatoria",
+        "passwords_dont_match": "Le password non corrispondono"
       }
     },
     "signup": {
@@ -79,7 +86,14 @@
         "passwordRequired": "La password è obbligatoria",
         "passwordMinLength": "La password deve contenere almeno 8 caratteri",
         "confirmPasswordRequired": "La conferma password è obbligatoria",
-        "passwordsDoNotMatch": "Le password non corrispondono"
+        "passwordsDoNotMatch": "Le password non corrispondono",
+        "name_required": "Nome obbligatorio",
+        "surname_required": "Cognome obbligatorio",
+        "email_invalid": "Email non valida",
+        "password_required": "Password obbligatoria",
+        "password_min_length": "Password deve contenere almeno 8 caratteri",
+        "confirm_password_required": "Conferma password obbligatoria",
+        "passwords_dont_match": "Le password non corrispondono"
       },
       "errors": {
         "user_exists": "Email già registrata",
